--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -10,15 +10,15 @@
     <header></header>
     <div class="main1">
         <div class="content_one">
-            <h1><i><span class="fadeOut">_</span>Fullstack Developer</i></h1>
-            <h2>Meu nome é <i>Samuel Costa</i>,<br> sou programador React <span class="cor">|</span> Javascript <span class="cor">|</span> Angular<br>
-            <span><img src="/imgs/react.png" class="icon"></span>
-            <span><img src="/imgs/javascript.png" class="icon"></span>
-            <span><img src="/imgs/html.png" class="icon"></span>
-            <span><img src="/imgs/angular.png" class="icon"></span></h2>
+            <h1><i><span class="fadeOut">_</span>Front-end Developer</i></h1>
+            <h2>Meu nome é <i>Samuel Costa</i>,<br> sou programador HTML <span class="cor">|</span> Javascript <span class="cor">|</span> Python<br>
+            <span><img src="/imgs/python1.png" class="icon"></span>
+            <span><img src="/imgs/javascript1.png" class="icon"></span>
+            <span><img src="/imgs/php.png" class="icon"></span>
+            <span><img src="/imgs/html1.png" class="icon"></span></h2>
         </div>
         <div class="content_two">
-            <img src="https://github-readme-stats-git-masterrstaa-rickstaa.vercel.app/api/top-langs/?username=samuelcney&layout=compact&bg_color=FFF&border_color=1aff00&title_color=000&text_color=000" class="toplangs">
+            <h2> Sou um programador front-end em constante evolução, atualmente dedicado aos estudos em Análise de Sistemas. Com sólida experiência em HTML5, CSS3 e JavaScript, estou determinado a construir interfaces web excepcionais. Meu conhecimento em Python e PHP complementa minha paleta de habilidades, enquanto continuo a explorar novas tecnologias e metodologias. Comprometido com o aprendizado contínuo, estou sempre em busca de desafios que me permitam expandir meu conhecimento e criar soluções inovadoras. </h2>
         </div>
     </div>
 
